--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -34,15 +34,27 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="box1">
+            <div class="固定1">
+              <p>固定</p>
+            </div>
+            <div class="可変1">
+              <p>可変</p>
+            </div>
+            <div class="固定2">
+              <p>固定</p>
+            </div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="box2">
+            <div class="可変2">
+              <p>可変</p>
+            </div>
+            <div class="可変3">
+              <p>可変</p>
+            </div>
+            <div class="固定3">
+              <p>固定</p>
+            </div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
