レビュー後修正

--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -35,24 +35,24 @@
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
           <div class="box1">
-            <div class="固定1">
+            <div class="cell pink">
               <p>固定</p>
             </div>
-            <div class="可変1">
+            <div class="cell purple">
               <p>可変</p>
             </div>
-            <div class="固定2">
+            <div class="cell blue">
               <p>固定</p>
             </div>
           </div>
           <div class="box2">
-            <div class="可変2">
+            <div class="cell yellow">
               <p>可変</p>
             </div>
-            <div class="可変3">
+            <div class="cell red">
               <p>可変</p>
             </div>
-            <div class="固定3">
+            <div class="cell green">
               <p>固定</p>
             </div>
           </div>
